# rnnoise

./: CMakeLists.txt
c_impl/src/: denoise.c
